port to 1.21
Signed-off-by: unilock <unilock@fennet.rentals>